swagger api city
