# api/city.go
@@ -18,6 +18,15 @@ type CityResponse struct {
 	County   string `json:"county"`
 }
 
+// getCities godoc
+//
+//	@Summary		Get all cities
+//	@Description	Returns a list of all available cities.
+//	@Tags			Cities
+//	@Produce		json
+//	@Success		200	{array}		CityResponse
+//	@Failure		500	{object}	map[string]interface{}
+//	@Router			/city [get]
 func (server *Server) getCities(ctx *gin.Context) {
 	cities, err := server.Queries.GetCities(ctx)
 	if err != nil {
@@ -34,6 +43,20 @@ type searchTicketsByCitiesRequest struct {
 	VehicleType       string `json:"vehicle_type" binding:"required,oneof=BUS AIRPLANE TRAIN"`
 }
 
+// searchTicketsByCities godoc
+
+// @Summary		Search tickets by origin, destination, and vehicle type
+// @Description	Returns a list of tickets for a specific route and vehicle type
+// @Tags			Tickets
+// @Accept			json
+// @Produce		json
+// @Param			request	body		searchTicketsByCitiesRequest	true	"Search Parameters"
+// @Success		200		{object}	db.SearchTicketsByCitiesRow
+// @Failure		400		{object}	map[string]interface{}
+// @Failure		404		{object}	map[string]interface{}
+// @Failure		500		{object}	map[string]interface{}
+// @Security		BearerAuth
+// @Router			/city [post]
 func (server *Server) searchTicketsByCities(ctx *gin.Context) {
 	var req searchTicketsByCitiesRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
